--- a/pages/good/good.wxml
+++ b/pages/good/good.wxml
@@ -6,20 +6,20 @@
 <scroll-view class="nav_right" scroll-y="true" scroll-into-view="{{toView}}" style="height:{{s_height}}px;margin-left:100px" bindscroll="scroll" scroll-with-animation="true">
   <view class="nav_right_box" wx:for="{{category}}" wx:for-item="item" style="height:100vh;">
     <!-- <scroll-view style="height: 100vh;"> -->
-      <view class="goods_lv">
-        <image src="http://teahouse.siring.cn/02379201909261757192802.jpg"/>
+      <view class="goods_lv" id="b_{{index}}">
+        <image src="{{item.category_images}}"/>
       </view>
       <view class='dv1'>
         <view class="liner"></view>
-        <view class="nav_right_tit" id="b_{{index}}">{{category[index].name}}</view>
+        <view class="nav_right_tit" >{{category[index].name}}</view>
       </view>
       <view class='good_box'>
-        <view class="nav_goods_box" wx:for="{{item.child}}" wx:for-item="good" bindtap="go_gooddetail" data-id='{{good.id}}'>
+        <view class="nav_goods_box" wx:for="{{item.child}}" wx:for-item="good" bindtap="go_gooddetail" data-id='{{good.id}}' data-type='{{item.is_good_type}}'>
           <!-- <view class="nav-img-box"> -->
-            <image class="nav_goods_l" src="{{good.goods_show_image}}"></image>
+            <image class="nav_goods_l" src="{{item.is_good_type == 0 ? good.goods_show_image : good.category_images}}"></image>
           <!-- </view> -->
           <view class="nav_goods_r">
-            <view class="nav_goods_name">{{good.goods_name}}</view>
+            <view class="nav_goods_name">{{item.is_good_type == 0 ? good.goods_name : good.name}}</view>
           </view>
         </view>
       </view>
