--- a/pages/good_lv/good_lv.wxml
+++ b/pages/good_lv/good_lv.wxml
@@ -1,16 +1,23 @@
 <!--pages/good_lv/good_lv.wxml-->
 <view class="lv_nav">
-    <view class="{{on == 1 ? 'on' : ''}}">综合</view>
-    <view class="{{on == 2 ? 'on' : ''}}">最新</view>
-    <view class="{{on == 3 ? 'on' : ''}}">价格</view>
-    <view class="{{on == 4 ? 'on' : ''}}">销量</view>
-    <view>
-        <image src="http://teahouse.siring.cn/02379201909261757192802.jpg" alt="" class="img"/>
+    <view class="{{on == 1 ? 'on' : ''}}" data-id="1" bindtap="switch">综合</view>
+    <view class="{{on == 2 ? 'on' : ''}}" data-id="2" bindtap="switch">最新</view>
+    <view class="{{on == 3 || on == 4 ? 'on' : ''}}" style="display:flex;justify-content : center;" data-id="3" bindtap="switch">价格
+    <view class="{{old_id == 3 ? 'div2' : 'div3'}}" wx:if="{{old_id > 2 && old_id < 5}}"></view>
+    <view class="div1" wx:else></view>
+    </view>
+    <view class="{{on == 5 || on == 6 ? 'on' : ''}}" style="display:flex;justify-content : center;" data-id="5" bindtap="switch">销量
+    <view class="{{old_id == 5 ? 'div2' : 'div3'}}" wx:if="{{old_id > 4}}"></view>
+    <view class="div1" wx:else></view>
+    </view>
+    <view bindtap="changStyle">
+        <image src="http://zhihuichacang.com/u695.png" alt="" class="img" wx:if="{{style == 0}}"/>
+        <image src="http://zhihuichacang.com/u696.png" alt="" class="img" wx:else/>
     </view>
 </view>
-<view class="main">
+<view class="{{style == 0 ? 'main' : ''}}">
 <!-- <view > -->
-    <view class="kuai" wx:for="{{goods}}" wx:key="index" data-id="{{item.id}}">
+    <view class="{{style == 0 ? 'kuai' : 'hang'}}" wx:for="{{goods}}" wx:key="index" data-id="{{item.id}}" bindtap="toGoods">
         <view class="m_img">
             <image src="{{item.goods_show_image}}" alt="" class="img"/>
         </view>
