--- a/pages/good/good.wxml
+++ b/pages/good/good.wxml
@@ -15,7 +15,7 @@
         <view class="nav_right_tit" >{{category[index].name}}</view>
       </view>
       <view class='good_box'>
-        <view class="nav_goods_box" wx:for="{{item.child}}" wx:for-item="good" bindtap="go_gooddetail" data-id='{{good.id}}' data-type='{{item.is_good_type}}'>
+        <view class="nav_goods_box" wx:for="{{item.child}}" wx:for-item="good" bindtap="go_gooddetail" data-id='{{good.id}}' data-type='{{item.is_good_type}}' data-name='{{item.is_good_type == 0 ? good.goods_name : good.name}}'>
           <!-- <view class="nav-img-box"> -->
             <image class="nav_goods_l" src="{{item.is_good_type == 0 ? good.goods_show_image : good.category_images}}"></image>
           <!-- </view> -->
