--- a/pages/diy/diypages/diypages.wxml
+++ b/pages/diy/diypages/diypages.wxml
@@ -1321,7 +1321,7 @@
             <view style="width:2rpx;background:#e2e2e2;height:30rpx;float:left;margin:18rpx 10rpx 0 0;" wx:if="{{params.navstyle==1}}"></view>
         </view>
         <swiper autoplay="true" circular="true" class="swiper_container" interval="{{params.speed*1000}}" vertical="true">
-            <swiper-item wx:for="{{data}}" wx:key="index">
+            <swiper-item wx:for="{{data}}" wx:key="index" catchtouchmove='catchTouchMove'>
                 <view class="swiper_item" wx:if="{{item.linktype!='server'}}">
                     <text bindtap="redirectto" class="swiper_item_text" data-link="{{item.linkurl}}" data-linktype="{{item.linktype}}" style="color:{{style.color}}">{{item.title}}</text>
                 </view>
