--- a/pages/good_lv/good_lv.wxml
+++ b/pages/good_lv/good_lv.wxml
@@ -2,11 +2,11 @@
 <view class="lv_nav">
     <view class="{{on == 1 ? 'on' : ''}}" data-id="1" bindtap="switch">综合</view>
     <view class="{{on == 2 ? 'on' : ''}}" data-id="2" bindtap="switch">最新</view>
-    <view class="{{on == 3 || on == 4 ? 'on' : ''}}" style="display:flex;justify-content : center;width:160rpx;" data-id="3" bindtap="switch">价格
+    <view class="{{on == 3 || on == 4 ? 'on' : ''}}" style="display:flex;justify-content : center;width:160rpx;" data-id="4" bindtap="switch">价格
     <view class="{{old_id == 3 ? 'div2' : 'div3'}}" wx:if="{{old_id > 2 && old_id < 5}}"></view>
     <view class="div1" wx:else></view>
     </view>
-    <view class="{{on == 5 || on == 6 ? 'on' : ''}}" style="display:flex;justify-content : center;width:160rpx;" data-id="5" bindtap="switch">销量
+    <view class="{{on == 5 || on == 6 ? 'on' : ''}}" style="display:flex;justify-content : center;width:160rpx;" data-id="6" bindtap="switch">销量
     <view class="{{old_id == 5 ? 'div2' : 'div3'}}" wx:if="{{old_id > 4}}"></view>
     <view class="div1" wx:else></view>
     </view>
@@ -24,7 +24,7 @@
         <view class="text">
             <view>{{item.goods_name}}</view>
             <view class="selling">{{item.goods_selling}}</view>
-            <view class="money">￥{{item.price}}</view>
+            <view class="money_box">￥<text class="money">{{item.price}}</text></view>
         </view>
     </view>
     
