--- a/pages/good_lv/good_lv.wxss
+++ b/pages/good_lv/good_lv.wxss
@@ -49,11 +49,13 @@
     font-size: 28rpx;
     margin: 10rpx 0;
 }
-.money {
+.money_box {
     color: red;
-    font-weight: 700;
     margin: 10rpx 0;
-    font-size: 40rpx;
+    font-size: 24rpx;
+}
+.money {
+    font-size: 36rpx;
 }
 .hang {
     display: flex;
