--- a/pages/integral_settlement/integral_settlement.wxml
+++ b/pages/integral_settlement/integral_settlement.wxml
@@ -34,9 +34,9 @@
 				<view class='order-goods-p'>{{goods.goods_selling}}</view>
 				<view class='unit-price-quantity'>
 					<view class='unit-price'>
-						<view class='unit-price-img'>
+						<!-- <view class='unit-price-img'>
 							<image src='http://zhihuichacang.com/img1.png' mode="scaleToFill"></image>
-						</view>
+						</view> -->
 
 						<view class='unit-price-p text_red' wx:if="{{goods.goods_standard==0}}"> 积分{{goods.grade_price}}/片</view>
 						<view class='unit-price-p text_red' wx:else> 积分{{goods.integral}}/片</view>
@@ -59,10 +59,10 @@
 		<view class='way_select'>
 			<radio-group class="radio-group" bindchange="radioChange">
 				<label class="radio">
-              <radio value="选择直邮"  color='#fff' checked='checked'/> <text class='text_radio'>选择直邮</text>
+              <radio value="选择直邮"  color='#02A0E6' checked='checked'/> <text class='text_radio'>选择直邮</text>
          </label>
 				<label class="radio">
-              <radio value="到店自提"  color='#fff'/><text class='text_radio'>到店自提</text>
+              <radio value="到店自提"  color='#02A0E6'/><text class='text_radio'>到店自提</text>
            </label>
 			
 			</radio-group>
@@ -84,10 +84,10 @@
 			<view class="direct_mail {{selected1?'show':'hidden'}}" bindtap='go_shop_address'>
 				<view class='direct_mail_infor_all'>
 					<view class='direct_mail_infor'>
-						<text>北京市01店 </text>
-						<text> 010-54779999</text>
-					</view>
-					<view class='direct_mail_add'>北京市朝阳区天鹅湾小区5号楼3单元201</view>
+					<text>{{shop_address.extract_name}}</text>
+					<text>{{shop_address.phone_num}}</text>
+				</view>
+				<view class='direct_mail_add'>{{shop_address.shop_address}}</view>
 				</view>
 				<view class='more_img' >
 					<image src='http://zhihuichacang.com/u1959.png'></image>
