--- a/pages/settlement/settlement.wxss
+++ b/pages/settlement/settlement.wxss
@@ -2,6 +2,16 @@
 .scrollBool{
   overflow-y: hidden;
 }
+.all {
+  overflow: hidden;
+  overflow-y: scroll;
+}
+/*隐藏滚动条*/
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  color: transparent;
+}
 /* 支付start */
 .pm-content{
   position: absolute;
