--- a/aftersale/pages/aftersale_finish/aftersale_finish.wxml
+++ b/aftersale/pages/aftersale_finish/aftersale_finish.wxml
@@ -32,7 +32,7 @@
         <view class="info-title" wx:else>换货信息</view>
         <view class="refund-goods">
             <view class="refund-img">
-                <image src="https://teahouse.siring.com.cn/uploads/{{dataObj.goods_images}}" />
+                <image src="{{dataObj.goods_images}}" />
             </view>
             <text>{{dataObj.goods_name}}</text>
         </view>
@@ -55,7 +55,7 @@
             </view>
             <view class="info-item" wx:if="{{dataObj.images.length!==0}}">
                 <block wx:for="{{dataObj.images}}" wx:key="">
-                    <image src="https://teahouse.siring.com.cn/uploads/{{item}}" />
+                    <image src="{{item}}" />
                 </block>
             </view>
             <view class="reply-items" wx:if="{{dataObj.reply.length!==0}}">
