--- a/pages/storage/view/view.wxml
+++ b/pages/storage/view/view.wxml
@@ -44,7 +44,7 @@
             <text class="storage-name">{{item.name}}</text>
           </view>
           <view class="enviroment-data-box">
-            <view class="enviroment-item item-video" bindtap="showLive">
+            <view class="enviroment-item item-video" data-id="{{index}}" bindtap="showLive">
               <image src="http://zhihuichacang.com/gif1.gif" class="icon-video" />
               <text class="temperature">实时视频</text>
             </view>
@@ -63,7 +63,7 @@
             </view>
           </view>
         </view>
-        <view class="" style="width:100%;height:100%;" wx:if="{{isLive}}">
+        <view class="" style="width:100%;height:100%;" wx:if="{{live_id == 'id_'+ index && isLive}}">
           <video id="myVideo" src="http://hls01open.ys7.com/openlive/d208d656ba774bc985a4aa7154cf329a.hd.m3u8" style="width: 100%;height: 400rpx;" 
           poster></video>
         </view>
