--- a/pages/order_detail/order_detail.wxml
+++ b/pages/order_detail/order_detail.wxml
@@ -179,7 +179,7 @@
                         <view class='num'>x{{item.order_quantity}}</view>
                     </view>
                 </view>
-                <view class='box_list_four'>
+                <view class='box_list_four' wx:if="{{item.order_type != 2}}">
                     <view class="flex" style="justify-content:flex-start;">
                         <view class="courier">{{item.express_name_ch}}：{{item.courier_number}}</view>
                          <view class="more_look" catchtap="go_logistics" data-id="{{item.id}}">查看物流></view>
