--- a/pages/good_lv/good_lv.wxss
+++ b/pages/good_lv/good_lv.wxss
@@ -36,6 +36,9 @@
     padding: 20rpx;
     
 }
+.m_img {
+    width: auto;
+}
 .m_img > image {
     width: 200rpx;
     height: 200rpx;
@@ -48,6 +51,13 @@
     color: rgb(174,174,174);
     font-size: 28rpx;
     margin: 10rpx 0;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+    
+}
+.selling_wid {
+    width: 450rpx;
 }
 .money_box {
     color: red;
