--- a/storage/pages/zcDetail/zcDetail.wxml
+++ b/storage/pages/zcDetail/zcDetail.wxml
@@ -142,7 +142,7 @@
           <view>购物车</view>
         </view> -->
         <view class="ft-btn">
-          <text wx:if="{{item.state==1}}" bind:tap="switchDialog">去支持</text>
+          <text wx:if="{{isbuy}}" bind:tap="switchDialog">去支持</text>
           <text wx:else>已结束</text>
         </view>
       </view>
