--- a/aftersale/pages/aftersale_success/aftersale_success.wxml
+++ b/aftersale/pages/aftersale_success/aftersale_success.wxml
@@ -1,7 +1,7 @@
 <view class="wrapper">
     <view class="tips">
-        <view class="tips-item">您已成功发起退款申请，如双方协商确认属实，请将商品寄还回商家，商家获得商品后，查明属实，即可退款；</view>
-        <view class="tips-item">寄还地址：北京市朝阳区天鹅湾小区5号楼3单元201北京市朝阳区天鹅湾小区5号楼3单元201     刘德华   13922830809</view>
+        <view class="tips-item">您已成功发起退款申请，如双方协商确认属实，请将商品寄还回商家，商家获得商品后，查明属实，即可退款到余额；</view>
+        <view class="tips-item">寄还地址：{{dataObj.after_address}}</view>
         <view class="tips-btn">
             <text wx:if="{{status==5&&whoHandle==2}}" class="aftersale-revoke">已撤销</text>
             <block wx:else>
