--- a/storage/pages/zcDetail/zcDetail.wxss
+++ b/storage/pages/zcDetail/zcDetail.wxss
@@ -33,6 +33,8 @@ view{overflow: initial !important;}
 .cho-spec .classify text{display: inline-block; line-height: 40rpx;}
 .cho-spec .classify image{width: 14rpx; height: 22rpx; position: absolute; right: 20rpx; top: 50%; margin-top: -11rpx;}
 /* tabBox section */
+.tabBox{margin-bottom:110rpx;}
+.tabBox_iphone{margin-bottom:180rpx;}
 .tab-hd{display: flex; align-items: flex-start; justify-content: space-around; height: 78rpx; line-height: 74rpx; border-bottom: 2rpx solid #e4e4e4; margin-bottom: 4rpx;}
 .tab-hd .active{color: #f10; border-bottom: 4rpx solid #f10;}
 .tab-bd{min-height: 1000rpx;}
