--- a/pages/bill/bill.wxss
+++ b/pages/bill/bill.wxss
@@ -46,3 +46,15 @@
     color: #333;
     text-align: right;
 }
+.seach {
+    border-bottom: 1px solid rgb(222,222,222);
+}
+.seach_input{
+    padding: 5rpx 20rpx 5rpx 80rpx ;
+    background: #fff;
+    border-radius:40rpx; 
+    font-size: 26rpx;
+    width: 600rpx;
+    margin: 10rpx auto;
+    border: 1px solid rgb(194,194,194);
+}
