--- a/pages/goods_detail/goods_detail.wxss
+++ b/pages/goods_detail/goods_detail.wxss
@@ -632,3 +632,17 @@ overflow:hidden;
   margin-bottom: 11rpx;
   vertical-align: middle;
 }
+.gui{
+  display:flex;
+  padding:16rpx 10rpx;
+  margin: 10rpx 0;
+  background-color:#fff;
+  font-size:26rpx;
+}
+.gui-s{
+  display:flex;
+  padding:30rpx 10rpx;
+  background-color:#fff;
+  font-size:26rpx;
+  border-bottom: solid 1px #EBEBEB;
+}
