--- a/sweep/pages/sweep_detail/sweep_detail.wxml
+++ b/sweep/pages/sweep_detail/sweep_detail.wxml
@@ -1,6 +1,6 @@
 <view class="all">
   <view class="img_content">
-      <image class="img" src="../../../images/img1.png" mode="widthFix" lazy-load="false" binderror="" bindload="" />
+      <image class="img" src="https://teahouse.siring.cn/image1345901.png" mode="widthFix" lazy-load="false" binderror="" bindload="" />
   </view>
   <view class="list_content">
     <view class="lista">
